# Taller_De_Programacion_I

./: README.md
TP_Grupal/: .gitignore  .mgitignore  Cargo.toml  README.md  Taller PRs.postman_collection.json  logger_comands.txt
TP_Grupal/.github/workflows/: rust.yml
TP_Grupal/.mgit/: config  index  index1  index2
TP_Grupal/.mgit/refs/heads/: main  master
TP_Grupal/.mgit/refs/tags/: a  v0  v2  v4  v7
TP_Grupal/src/: add.rs  branch.rs  branch_handler.rs  cat_file.rs  check_ignore.rs  checkout.rs  client.rs  clone.rs  commit.rs  config.rs  configuration.rs  diff.rs  fetch.rs  git_config.rs  hash_object.rs  ignorer.rs  index.rs  init.rs  lib.rs  log.rs  logger.rs  ls_files.rs  ls_tree.rs  main.rs  merge.rs  parse_commands.rs  pull.rs  pull_request.rs  push.rs  rebase.rs  remote.rs  remote_handler.rs  rm.rs  server.rs  server_utils.rs  show_ref.rs  status.rs  tag.rs  tree_handler.rs  utils.rs
TP_Grupal/src/api/: server.rs
TP_Grupal/src/api/handlers/: get.rs  (+4 more)
TP_Grupal/src/gui/: build.glade  clone_window.rs  init_window.rs  main_window.rs  mod.rs  new_window.ui  new_window.ui~  new_window2.ui  new_window2.ui~  part3.ui  part3.ui~  repository_window.rs  style.rs  visual_branches.rs  windowClone.ui  windowClone.ui~  windowInit.ui  windowInit.ui~
TP_Grupal/src/packfile/: delta_utils.rs  entry.rs  handler.rs  mod.rs  object_type.rs
TP_Grupal/tests/: logger_tests.rs  test.txt  tests_add.rs  tests_api.rs  tests_client.rs  tests_packfile.rs  tests_pull.rs  tests_server.rs
TP_Grupal/tests/commit/: placeholder.txt
TP_Grupal/tests/packfiles/: pack-ofs-delta.pack
(+54 files in other folders)
