[package]
name = "messi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.6"
flate2 = "1.0"
rand = "0.8"
gtk = "0.9.0"
pango = "0.9"
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
